cmake_minimum_required(VERSION 2.8)
PROJECT( blynux )
INCLUDE(FindPkgConfig)
PKG_CHECK_MODULES( LIBUSB libusb-1.0 REQUIRED )

IF (NOT ${LIBUSB_FOUND} )
  MESSAGE(FATAL_ERROR "libusb-1.0 is missing")
ENDIF (NOT ${LIBUSB_FOUND} )

ADD_EXECUTABLE( ${PROJECT_NAME} src/blynux.cpp )

TARGET_LINK_LIBRARIES( ${PROJECT_NAME} ${LIBUSB_LDFLAGS} )

SET( CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} ${LIBUSB_CFLAGS}" )
SET( CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -Wall" )
SET( CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -g" )
SET( CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -D_GNU_SOURCE" )

INSTALL(TARGETS ${PROJECT_NAME} DESTINATION bin )


ADD_CUSTOM_TARGET(uninstall COMMAND echo 'to uninstall, type: xargs rm < install_manifest.txt')
